put game screen in game start and divided the  input and game screens into divs that are shown and hidden by game  start. added style code for that, fixed enter button capture.

--- a/style.css
+++ b/style.css
@@ -101,3 +101,16 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
+#game {
+	display: none;
+  background-color: rgba(0, 123, 60, .8);
+	border: 2px solid black;
+	border-spacing: 3px;
+	margin: 25px;
+	float: left;
+}
+#start {
+	display: inline;
+	
+}
